[gd_scene load_steps=5 format=2]

[ext_resource path="res://font/roboto_mono_32.tres" type="DynamicFont" id=1]
[ext_resource path="res://font/roboto_mono_64.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/MenuScreen.tres" type="StyleBox" id=3]
[ext_resource path="res://UI/SettingsMenuScreen.gd" type="Script" id=4]

[node name="SettingsMenuScreen" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_right = 1004.0
margin_bottom = 580.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Rows"]
margin_right = 1004.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 2 )
text = "SETTINGS"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 90.0
margin_right = 1004.0
margin_bottom = 183.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows/CenterContainer"]
margin_left = 429.0
margin_right = 575.0
margin_bottom = 93.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_right = 146.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/HBoxContainer"]
margin_top = 13.0
margin_right = 66.0
margin_bottom = 27.0
text = "FullScreen"

[node name="CheckButton" type="CheckButton" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 146.0
margin_bottom = 40.0

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 146.0
margin_bottom = 93.0
custom_fonts/font = ExtResource( 1 )
text = "BACK"
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/HBoxContainer/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
